# svarog

./: .cspell.json  .droid.yaml  .gitignore  .mcp.json  .pre-commit-config.yaml  .ruff.base.toml  .ruff.toml  AGENTS.md  CLAUDE.md  PLAN.md  README.md  hello.py  opencode.json  pyproject.toml
.claude/: settings.json
.claude/commands/: fix_issues.md  git_commit.md  git_status.md  prime.md
.factory/docs/: 2025-10-15-comment-functionality-for-file-sync-feature-8-character-hash.md
.factory/droids/: tdd-test-architect.md
.github/: copilot-instructions.md
.github/chatmodes/: developer.chatmode.md  gilfoyle.chatmode.md  git-committer.chatmode.md  planner.chatmode.md  tdd-test-architect.chatmode.md
.github/instructions/: coding.instructions.md  coding.instructions.yaml  project-custom.instructions.md  project.instructions.md  python-custom.instructions.md  python.instructions.md
.github/workflows/: ci.yaml  release.yaml
src/svarog/: __init__.py  _version.py  cli.py
src/svarog/_claude_hooks/: __init__.py  _cli.py  _common.py  notification.py  post_tool_use.py  pre_tool_use.py  stop.py  subagent_stop.py
src/svarog/_sync/: __init__.py  _cli.py  _exceptions.py  file_sync.py  section_mapping.py  structure_adapter.py
src/svarog/_tools/: __init__.py  _cli.py  json_tool.py
src/svarog/_utils/: __init__.py  svarlog_logger.py  tts.py
src/svarog/core/: constants.py
src/svarog/tests/: __init__.py  test_cli.py
tests/svarog/: __init__.py  test_sync_cli.py
tests/svarog/_claude_hooks/: test_common.py  test_notification.py  test_post_tool_use.py  test_pre_tool_use.py  (+2 more)
(+18 files in other folders)
