[project]
name = "svarog"
dynamic = ["version"]

description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "pyyaml>=6.0.2",
    "structlog>=24.1.0",
    "typer>=0.12.0",
]

[project.scripts]
svarog = "svarog.cli:cli_app"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/svarog/__about__.py"

[dependency-groups]
claude-hooks = ["pyttsx3>=2.99"]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
    "ipython>=8.37.0",
    "rope>=1.14.0",
    "pytest-mock>=3.14.1",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*", "*/logger/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
